# ember

./: CMakeLists.txt  conanfile.py
source/: CMakeLists.txt
source/containers/: CMakeLists.txt  README.md
source/containers/public/ember/containers/: array.hpp  array.inl  linked_list.hpp  map.hpp  ordered_map.hpp  queue.hpp  set.hpp  sparse_set.hpp  sparse_set.inl  stack.hpp  static_array.hpp
source/containers/tests/: CMakeLists.txt  array_tests.cpp  sparse_set_tests.cpp
source/core/: CMakeLists.txt  README.md
source/core/private/: log.cpp
source/core/public/ember/core/: enum.hpp  exception.hpp  export.hpp  log.hpp  log.inl  profiling.hpp
source/ecs/: CMakeLists.txt  README.md
source/ecs/private/: archetype.cpp  component_manager.cpp  entity_manager.cpp
source/ecs/public/ember/ecs/: archetype.hpp  archetype.inl  component_helper.hpp  component_helper.inl  component_manager.hpp  component_manager.inl  entity.hpp  entity_manager.hpp  entity_manager.inl  function_traits.hpp  types.hpp
source/ecs/tests/: CMakeLists.txt  component_tests.cpp  entity_tests.cpp  system_tests.cpp
source/graphics/: CMakeLists.txt  README.md
source/graphics/private/: command_buffer.cpp  command_buffer_iterator.cpp  commands.cpp  commands.hpp  compute_command_buffer.cpp  graphics.cpp  graphics_command_buffer.cpp  resource_cast.hpp  resource_cast.inl  shader_cache.cpp  transfer_command_buffer.cpp
source/graphics/private/vulkan/: allocation_callbacks.cpp  allocation_callbacks.hpp  allocation_callbacks.inl  device_memory_allocator.cpp  device_memory_allocator.hpp  device_memory_allocator.inl  exception.hpp  host_memory_allocator.cpp  host_memory_allocator.hpp  log.hpp  memory_barrier_simplification.cpp  memory_barrier_simplification.hpp  types.hpp  verification.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_buffer.inl  vulkan_compute_pipeline_object.cpp  vulkan_compute_pipeline_object.hpp  vulkan_compute_pipeline_object.inl  vulkan_descriptor.cpp  vulkan_descriptor.hpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_pool.inl  vulkan_descriptor_set.cpp  vulkan_descriptor_set.hpp  vulkan_descriptor_set.inl  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.hpp  vulkan_descriptor_set_layout.inl  vulkan_device.cpp  vulkan_device.hpp  vulkan_device.inl  vulkan_extension_functions.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_fence.inl  vulkan_framebuffer.cpp  vulkan_framebuffer.hpp  (+40 more)
source/graphics/public/ember/graphics/: buffer.hpp  command_buffer.hpp  command_buffer.inl  command_buffer_iterator.hpp  command_buffer_iterator.inl  command_types.hpp  compute_command_buffer.hpp  compute_command_buffer.inl  compute_pipeline_object.hpp  compute_queue.hpp  compute_queue.inl  descriptor.hpp  descriptor_pool.hpp  descriptor_set.hpp  descriptor_set_layout.hpp  device.hpp  exception.hpp  fence.hpp  framebuffer.hpp  graphics.hpp  graphics_command_buffer.hpp  graphics_command_buffer.inl  graphics_pipeline_object.hpp  graphics_queue.hpp  graphics_queue.inl  image.hpp  image_view.hpp  instance.hpp  pipeline_stage.hpp  push_constant_descriptor.hpp  render_pass.hpp  resource.hpp  resource_factory.hpp  sampler.hpp  semaphore.hpp  shader.hpp  shader_cache.hpp  shader_cache.inl  submission_types.hpp  swapchain.hpp  (+4 more)
source/maths/: CMakeLists.txt  README.md
source/maths/public/ember/maths/: concepts.hpp  helpers.hpp  helpers.inl  matrix.hpp  matrix.inl  quaternion.hpp  quaternion.inl  types.hpp  vector.hpp  vector.inl
source/maths/tests/: CMakeLists.txt  matrix_tests.cpp  quaternion_tests.cpp  vector_tests.cpp
source/memory/: CMakeLists.txt  README.md
source/memory/private/: memory.cpp
source/memory/private/allocators/: global_allocator.cpp  global_allocator.hpp  global_allocator.inl
source/memory/public/ember/memory/: exception.hpp  handle.hpp  handle.inl  memory.hpp  memory.inl  unique_ptr.hpp  unique_ptr.inl
source/memory/tests/: CMakeLists.txt  allocation_tests.cpp  unique_ptr_tests.cpp
source/platform/: CMakeLists.txt  README.md
source/platform/private/win32/: win32_input.cpp  win32_input.hpp  win32_message_handler.cpp  win32_message_handler.hpp  win32_platform.cpp  win32_window.cpp
source/platform/public/ember/platform/: input.hpp  platform.hpp  window.hpp  window.inl
